@@ -2,6 +2,8 @@ debhelper (6.0.13) UNRELEASED; urgency=low
 
   * dh_clean: Don't delete core dumps. (Too DWIM, and "core" is not
     necessarily a core dump.) Closes: #477391
+  * Record debhelper commands that successfully finish in a per-package log
+    file.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 22 Apr 2008 17:54:20 -0400
 
